; ModuleID = '/home/carl/AnghaBench/esp-idf/components/mdns/extr_mdns.c__mdns_search_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/mdns/extr_mdns.c__mdns_search_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32*, i64, i32, i32*, i32, i64, i32, i32, i8*, i8*, i8*, i32 }

@HOOK_MALLOC_FAILED = common dso_local global i32 0, align 4
@MDNS_NAME_BUF_LEN = common dso_local global i64 0, align 8
@SEARCH_INIT = common dso_local global i32 0, align 4
@portTICK_PERIOD_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_6__* (i8*, i8*, i8*, i32, i32, i32)* @_mdns_search_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_6__* @_mdns_search_init(i8* %0, i8* %1, i8* %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_6__*, align 8
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  %15 = call i64 @malloc(i32 96)
  %16 = inttoptr i64 %15 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %16, %struct.TYPE_6__** %14, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %18 = icmp ne %struct.TYPE_6__* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %6
  %20 = load i32, i32* @HOOK_MALLOC_FAILED, align 4
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %7, align 8
  br label %118

21:                                               ; preds = %6
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %23 = call i32 @memset(%struct.TYPE_6__* %22, i32 0, i32 96)
  %24 = call i32 (...) @xSemaphoreCreateBinary()
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 12
  store i32 %24, i32* %26, align 8
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 12
  %29 = load i32, i32* %28, align 8
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %34, label %31

31:                                               ; preds = %21
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %33 = call i32 @free(%struct.TYPE_6__* %32)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %7, align 8
  br label %118

34:                                               ; preds = %21
  %35 = load i8*, i8** %8, align 8
  %36 = call i32 @_str_null_or_empty(i8* %35)
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %53, label %38

38:                                               ; preds = %34
  %39 = load i8*, i8** %8, align 8
  %40 = load i64, i64* @MDNS_NAME_BUF_LEN, align 8
  %41 = sub nsw i64 %40, 1
  %42 = call i8* @strndup(i8* %39, i64 %41)
  %43 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %44 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %43, i32 0, i32 11
  store i8* %42, i8** %44, align 8
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 11
  %47 = load i8*, i8** %46, align 8
  %48 = icmp ne i8* %47, null
  br i1 %48, label %52, label %49

49:                                               ; preds = %38
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %51 = call i32 @_mdns_search_free(%struct.TYPE_6__* %50)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %7, align 8
  br label %118

52:                                               ; preds = %38
  br label %53

53:                                               ; preds = %52, %34
  %54 = load i8*, i8** %9, align 8
  %55 = call i32 @_str_null_or_empty(i8* %54)
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %72, label %57

57:                                               ; preds = %53
  %58 = load i8*, i8** %9, align 8
  %59 = load i64, i64* @MDNS_NAME_BUF_LEN, align 8
  %60 = sub nsw i64 %59, 1
  %61 = call i8* @strndup(i8* %58, i64 %60)
  %62 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %63 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %62, i32 0, i32 10
  store i8* %61, i8** %63, align 8
  %64 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %65 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %64, i32 0, i32 10
  %66 = load i8*, i8** %65, align 8
  %67 = icmp ne i8* %66, null
  br i1 %67, label %71, label %68

68:                                               ; preds = %57
  %69 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %70 = call i32 @_mdns_search_free(%struct.TYPE_6__* %69)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %7, align 8
  br label %118

71:                                               ; preds = %57
  br label %72

72:                                               ; preds = %71, %53
  %73 = load i8*, i8** %10, align 8
  %74 = call i32 @_str_null_or_empty(i8* %73)
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %91, label %76

76:                                               ; preds = %72
  %77 = load i8*, i8** %10, align 8
  %78 = load i64, i64* @MDNS_NAME_BUF_LEN, align 8
  %79 = sub nsw i64 %78, 1
  %80 = call i8* @strndup(i8* %77, i64 %79)
  %81 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %82 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %81, i32 0, i32 9
  store i8* %80, i8** %82, align 8
  %83 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %84 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %83, i32 0, i32 9
  %85 = load i8*, i8** %84, align 8
  %86 = icmp ne i8* %85, null
  br i1 %86, label %90, label %87

87:                                               ; preds = %76
  %88 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %89 = call i32 @_mdns_search_free(%struct.TYPE_6__* %88)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %7, align 8
  br label %118

90:                                               ; preds = %76
  br label %91

91:                                               ; preds = %90, %72
  %92 = load i32, i32* %11, align 4
  %93 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %94 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %93, i32 0, i32 8
  store i32 %92, i32* %94, align 4
  %95 = load i32, i32* %12, align 4
  %96 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %97 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %96, i32 0, i32 7
  store i32 %95, i32* %97, align 8
  %98 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %99 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %98, i32 0, i32 6
  store i64 0, i64* %99, align 8
  %100 = load i32, i32* %13, align 4
  %101 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %102 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %101, i32 0, i32 5
  store i32 %100, i32* %102, align 8
  %103 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %104 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %103, i32 0, i32 4
  store i32* null, i32** %104, align 8
  %105 = load i32, i32* @SEARCH_INIT, align 4
  %106 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %107 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %106, i32 0, i32 3
  store i32 %105, i32* %107, align 8
  %108 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %109 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %108, i32 0, i32 2
  store i64 0, i64* %109, align 8
  %110 = call i32 (...) @xTaskGetTickCount()
  %111 = load i32, i32* @portTICK_PERIOD_MS, align 4
  %112 = mul nsw i32 %110, %111
  %113 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %114 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %113, i32 0, i32 0
  store i32 %112, i32* %114, align 8
  %115 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %116 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %115, i32 0, i32 1
  store i32* null, i32** %116, align 8
  %117 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  store %struct.TYPE_6__* %117, %struct.TYPE_6__** %7, align 8
  br label %118

118:                                              ; preds = %91, %87, %68, %49, %31, %19
  %119 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  ret %struct.TYPE_6__* %119
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @memset(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @xSemaphoreCreateBinary(...) #1

declare dso_local i32 @free(%struct.TYPE_6__*) #1

declare dso_local i32 @_str_null_or_empty(i8*) #1

declare dso_local i8* @strndup(i8*, i64) #1

declare dso_local i32 @_mdns_search_free(%struct.TYPE_6__*) #1

declare dso_local i32 @xTaskGetTickCount(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
